# shopping_list_bot_plus_django_postgres

./: .gitignore  Dockerfile  Dockerfile.bot_base  docker-compose.yml  docker-compose_t.yml  pyproject.toml  script.ps1  script_t.ps1
bot/: TODO.py  constants.py  create_bot.py  emoji.py  main.py  middlewares.py  translate.py
bot/api/: django_auth.py
bot/archive/: main_menu.py  register_api.py
bot/business_processes/categories/: categories_sort.py  category_add.py  category_delete.py  category_purify.py  category_update.py
bot/business_processes/categories/utils/: categories_menu_keyboard.py
bot/business_processes/groups/: group_add.py  group_change_current.py  group_delete.py  group_edit.py  group_line_up.py  group_update.py
bot/business_processes/help/: main_help.py
bot/business_processes/lists/: list_change_current.py  list_create.py  list_delete.py  list_update.py  lists_read_and_menu.py  lists_share_and_menu.py
bot/business_processes/options/: options_read_and_menu.py
bot/business_processes/purchases/: list_read_and_menu.py  purchase_add.py  purchase_categorize_one.py  purchase_delete.py  purchase_delete_and_list_menu.py  purchase_uncategorize_one.py  purchase_update.py
bot/business_processes/user/: manage_friends.py  user_create_start.py
bot/locales/: messages.pot
core/: settings.py  telegram_bot_user_id.py  urls.py
djDocker/: Dockerfile  Dockerfile.base  Dockerfile_t  start.sh  start_t.sh
list/: admin.py  constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
list/templates/myauth/: base.html  register.html
(+10 files in other folders)
